src/pages/index.module.css
/**
 * CSS files with the .module.css suffix will be treated as CSS modules
 * and scoped locally.
 */

.heroBanner {
  padding: 4rem 0;
  text-align: center;
  position: relative;
  overflow: hidden;
}

@media screen and (max-width: 996px) {
  .heroBanner {
    padding: 2rem;
  }
}

.buttons {
  display: flex;
  align-items: center;
  justify-content: center;
}

.mytitle {
  font-size: 3rem;
  max-width: max-content;
  margin: 1rem auto 2rem auto;
  background: -webkit-linear-gradient(
    315deg,
    #647eff 25%,
    var(--ifm-color-primary)
  );
  /* background: -webkit-linear-gradient(315deg, #647eff 25%, #2e8555); */
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
}

.discord {
  color: white;
}

[data-theme="dark"] .discord {
  color: black;
}

